Construcao do main com sidebar

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 								<span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
 							</div>
 							<div class="form-group">
-								<button type="submit" class="form-control btn btn-primary submit px-3">Entrar</button>
+								<a href="main.html" type="submit" class="form-control btn btn-primary submit px-3">Entrar</a>
 							</div>
 							<div class="form-group d-md-flex">
 								<div class="w-50">
@@ -43,7 +43,7 @@
 								</div>
 							</div>
 						</form>
-						<p class="w-100 text-center">&mdash; Entrar com outra conta &mdash;</p>
+						<p class="w-100 text-center">&mdash; Crie uma conta &mdash;</p>
 					</div>
 				</div>
 			</div>
