Criado tela main e adicionado método get image

--- a/main.html
+++ b/main.html
@@ -13,55 +13,45 @@
 <body class="img js-fullheight" style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
 
     <div class="wrapper">
-        <!-- Sidebar  -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h3 style="color: white;">Bootstrap Sidebar</h3>
+                <h3 style="color: white;">GR Company</h3>
             </div>
 
             <ul class="list-unstyled components">
-                <p>Dummy Heading</p>
+                <p>Acesse nossos Canais</p>
                 <li class="active">
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
+                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Inicio</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li>
                             <a class="salvaA" href="#">Home 1</a>
                         </li>
-                        <li>
-                            <a href="#">Home 2</a>
-                        </li>
-                        <li>
-                            <a href="#">Home 3</a>
-                        </li>
                     </ul>
                 </li>
                 <li>
-                    <a class="salvaA" href="#">About</a>
+                    <a class="salvaA" href="#">Contato</a>
                 </li>
                 <li>
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false"
-                        class="dropdown-toggle">Pages</a>
+                        class="dropdown-toggle">Sobre o Projeto</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu">
                         <li>
-                            <a href="#">Page 1</a>
+                            <a href="#">Alunos</a>
                         </li>
                         <li>
-                            <a href="#">Page 2</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 3</a>
+                            <a href="#">Tema</a>
                         </li>
                     </ul>
                 </li>
-                <li>
-                    <a href="#">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
             </ul>
         </nav>
+        <div class="maintools">
+            <div id="boxApi">
+                <button onclick="endPoint_API()">EndPoint API</button>
+            </div>
+        </div>
     </div>
+
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
