--- a/Image.html
+++ b/Image.html
@@ -10,110 +10,83 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
   <style>
-    .container {
-      max-width: 960px;
-      padding: 20px;
-    }
+    body{
+  background: rgba(0,0,0,0.9);
+}
+form{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -100px;
+  margin-left: -250px;
+  width: 500px;
+  height: 200px;
+  border: 4px dashed #fff;
 
-    h1 {
-      color: whitesmoke;
-      display: block;
-      text-align: center;
-    }
+}
 
-    h1 small {
-      display: block;
+form p{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  line-height: 170px;
+  z-index:2 ;
+  color: #ffffff;
+  font-family: Arial;
+}
+form input{
+  position: absolute;
+  z-index:0 ;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  opacity: 0;
+}
 
-      color: whitesmoke;
-    }
-
-    .avatar-upload {
-      position: relative;
-      max-width: 205px;
-      margin: 50px auto;
-    }
-
-    .avatar-upload .avatar-edit {
-      position: absolute;
-      right: 12px;
-      z-index: 1;
-      top: 10px;
-    }
-
-    .avatar-upload .avatar-edit input {
-      display: none;
-    }
-
-    .avatar-upload .avatar-edit input+label {
-      display: inline-block;
-      width: 34px;
-      height: 34px;
-      margin-bottom: 0;
-      border-radius: 100%;
-      background: rgb(193, 196, 15);
-      border: 1px solid transparent;
-      box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.12);
-      cursor: pointer;
-      font-weight: normal;
-      transition: all 0.2s ease-in-out;
-    }
-
-    .avatar-upload .avatar-edit input+label:hover {
-      background: rgb(193, 196, 15);
-      border-color: rgb(193, 196, 15);
-    }
-
-    .avatar-upload .avatar-edit input+label:after {
-      content: "\f040";
-      font-family: 'FontAwesome';
-      color: black;
-      position: absolute;
-      top: 10px;
-      left: 0;
-      right: 0;
-      text-align: center;
-      margin: auto;
-    }
-
-    .avatar-upload .avatar-preview {
-      width: 192px;
-      height: 192px;
-      position: relative;
-      border-radius: 100%;
-      border: 6px solid rgb(193, 196, 15);
-      box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
-    }
-
-    .avatar-upload .avatar-preview>div {
-      width: 100%;
-      height: 100%;
-      border-radius: 100%;
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-  </style>
+ form button{
+  margin: 0;
+  color: #fff;
+  background: #16a085;
+  border: none;
+  width: 508px;
+  height: 35px;
+  border-radius: 4px;
+  
+  border-bottom: 4px solid #117A60;
+  transition: all .2s ease;
+  outline: none;
+}
+form button:hover{
+  background: #149174;
+	color: #0C5645;
+}
+form button:active{
+  border:0;
+}
+form img {
+  position: absolute;
+  z-index: 1 ;
+  width:100%;
+  height:100%;
+  
+}
+ </style>
 </head>
 
 <body class="img js-fullheight"
   style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
-  <div class="container">
-    <div class="text-center ">
-      <h1 class="heading-section">Adicione a sua imagem
-      </h1>
-    </div>
-    <div class="avatar-upload container">
-      <div class="avatar-edit">
-        <input type='file' id="imageUpload" accept=".png, .jpg, .jpeg" />
-        <label for="imageUpload"></label>
-      </div>
-      <div class="avatar-preview">
-        <div id="imagePreview">
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
+
+  
+    <form action="upload.php" method="POST">
+      <input type="file"  id="imageUpload" accept=".png, .jpg, .jpeg" >
+      <p> Arraste a imagem ou clique na area</p>
+        <img id="imagePreview">
+        <button type="submit">Upload</button>
+    </form>
+    
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
