--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 
 <body class="img js-fullheight" style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
 
-    <div class="wrapper">
+    <!-- <div class="wrapper">
         <nav id="sidebar">
             <div class="sidebar-header">
                 <h3 style="color: white;">GR Company</h3>
@@ -50,7 +50,15 @@
                 <button onclick="endPoint_API()">EndPoint API</button>
             </div>
         </div>
-    </div>
+    </div> -->
+
+    <!-- As a heading -->
+    <nav class="navbar navbar-dark bg-dark">
+        <span class="navbar-brand mb-0 h1">GR Company</span>
+    </nav>
+    <div class="maintools">
+        
+    </div>    
 
 
     <script src="js/jquery.min.js"></script>
