--- a/Image.html
+++ b/Image.html
@@ -10,70 +10,75 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
   <style>
-    body{
-  background: rgba(0,0,0,0.9);
-}
-form{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -100px;
-  margin-left: -250px;
-  width: 500px;
-  height: 200px;
-  border: 4px dashed #fff;
+    body {
+      background: rgba(0, 0, 0, 0.9);
+    }
 
-}
+    form {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-top: -100px;
+      margin-left: -250px;
+      width: 500px;
+      height: 200px;
+      border: 4px dashed #fff;
 
-form p{
- 
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  line-height: 170px;
-  
-  color: #ffffff;
-  font-family: Arial;
-}
-form input{
-  position: absolute;
- 
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  outline: none;
-  opacity: 0;
-}
+    }
 
- form button{
-  margin: 0;
-  color: #fff;
-  background: #16a085;
-  border: none;
-  width: 508px;
-  height: 35px;
-  border-radius: 4px;
-  
-  border-bottom: 4px solid #117A60;
-  transition: all .2s ease;
-  outline: none;
-}
-form button:hover{
-  background: #149174;
-	color: #0C5645;
-}
-form button:active{
-  border:0;
-}
-form img {
-  position: absolute;
-  z-index: 1 ;
-  width:100%;
-  height:100%;
-  
-}
- </style>
+    form p {
+
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      line-height: 170px;
+
+      color: #ffffff;
+      font-family: Arial;
+    }
+
+    form input {
+      position: absolute;
+
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      outline: none;
+      opacity: 0;
+    }
+
+    form button {
+      margin: 0;
+      color: #fff;
+      background: #16a085;
+      border: none;
+      width: 508px;
+      height: 35px;
+      border-radius: 4px;
+
+      border-bottom: 4px solid #117A60;
+      transition: all .2s ease;
+      outline: none;
+    }
+
+    form button:hover {
+      background: #149174;
+      color: #0C5645;
+    }
+
+    form button:active {
+      border: 0;
+    }
+
+    form img {
+      position: absolute;
+      z-index: 1;
+      width: 100%;
+      height: 100%;
+
+    }
+  </style>
 </head>
 
 <body class="img js-fullheight"
@@ -84,7 +89,7 @@ form img {
     <p>Arraste a imagem para está area.</p>
     <button onclick="Enviar()" type="submit">Upload</button>
   </form>
-    
+
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
