--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>TCC</title>
 	<meta charset="utf-8">
@@ -8,7 +9,9 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
-<body class="img js-fullheight" style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
+
+<body class="img js-fullheight"
+	style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
@@ -25,11 +28,14 @@
 								<input type="text" class="form-control" placeholder="Usuário" required>
 							</div>
 							<div class="form-group">
-								<input id="password-field" type="password" class="form-control" placeholder="Senha" required>
-								<span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
+								<input id="password-field" type="password" class="form-control" placeholder="Senha"
+									required>
+								<span toggle="#password-field"
+									class="fa fa-fw fa-eye field-icon toggle-password"></span>
 							</div>
 							<div class="form-group">
-								<a href="main.html" type="submit" class="form-control btn btn-primary submit px-3">Entrar</a>
+								<a href="main.html" type="submit"
+									class="form-control btn btn-primary submit px-3">Entrar</a>
 							</div>
 							<div class="form-group d-md-flex">
 								<div class="w-50">
@@ -54,4 +60,5 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
+
 </html>
