--- a/teste.html
+++ b/teste.html
@@ -32,23 +32,36 @@ PDX-License-Identifier: MIT-0 (For details, see https://github.com/awsdocs/amazo
       Image: {
         Bytes: imageData
       },
-      Attributes: [
-        'ALL',
-      ]
+      MaxLabels: 123,
+      MinConfidence: 70
     };
-    rekognition.detectFaces(params, function (err, data) {
+
+    rekognition.detectLabels(params, function (err, data) {
       if (err) console.log(err, err.stack); // an error occurred
-      else {
-        var table = "<table><tr><th>Low</th><th>High</th></tr>";
-        // show each face and build out estimated age table
-        for (var i = 0; i < data.FaceDetails.length; i++) {
-          table += '<tr><td>' + data.FaceDetails[i].AgeRange.Low +
-            '</td><td>' + data.FaceDetails[i].AgeRange.High + '</td></tr>';
+      else 
+      {
+        for (let i = 0; i < data["Labels"].length; i++)
+        {
+          if (data["Labels"][i]["Name"] != "Clothing") {
+            console.log(data["Labels"][i]["Name"] + " - " + data["Labels"][i]["Confidence"]); 
+          }
         }
-        table += "</table>";
-        document.getElementById("opResult").innerHTML = table;
       }
     });
+
+    // rekognition.detectFaces(params, function (err, data) {
+    //   if (err) console.log(err, err.stack); // an error occurred
+    //   else {
+    //     var table = "<table><tr><th>Low</th><th>High</th></tr>";
+    //     // show each face and build out estimated age table
+    //     for (var i = 0; i < data.FaceDetails.length; i++) {
+    //       table += '<tr><td>' + data.FaceDetails[i].AgeRange.Low +
+    //         '</td><td>' + data.FaceDetails[i].AgeRange.High + '</td></tr>';
+    //     }
+    //     table += "</table>";
+    //     document.getElementById("opResult").innerHTML = table;
+    //   }
+    // });
 
   }
   //Loads selected image and unencodes image bytes for Rekognition DetectFaces API
