--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 									class="fa fa-fw fa-eye field-icon toggle-password"></span>
 							</div>
 							<div class="form-group">
-								<a href="main.html" type="submit"
-									class="form-control btn btn-primary submit px-3">Entrar</a>
+								<a href="main.html" type="submit" id="btnEntrar_Click" class="form-control btn btn-primary submit px-3">Entrar</a>
 							</div>
 							<div class="form-group d-md-flex">
 								<div class="w-50">
