--- a/main.html
+++ b/main.html
@@ -60,8 +60,8 @@
     <div id="maintools">
         <div class="d-grid gap-2 col-10 mx-auto" style="margin-top: 2%;">
             <a href="Image.html" class="btn-tools btn-primary-tools btn-lg" type="button">Registrar Produto</a>
-            <a href="#" class="btn-tools btn-primary-tools btn-lg" type="button">EndPoint</a>
-          </div>
+            <a href="#" class="btn-tools btn-primary-tools btn-lg" type="button">Consultar Produto</a>
+        </div>
     </div>
 
 
