--- a/Imagem.html
+++ b/Imagem.html
@@ -6,17 +6,93 @@ PDX-License-Identifier: MIT-0 (For details, see https://github.com/awsdocs/amazo
 <html>
 
 <head>
+  <meta charset="UTF-8">
+  <title>Teste imagem envio</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
   <script src="aws-cognito-sdk.min.js"></script>
   <script src="amazon-cognito-identity.min.js"></script>
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.16.0.min.js"></script>
-  <meta charset="UTF-8">
-  <title>Rekognition</title>
+  <style>
+    body {
+      background: rgba(0, 0, 0, 0.9);
+    }
+
+    form {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-top: -100px;
+      margin-left: -250px;
+      width: 500px;
+      height: 200px;
+      border: 4px dashed #fff;
+
+    }
+
+    form p {
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      line-height: 170px;
+      color: #ffffff;
+      font-family: Arial;
+    }
+
+    form input {
+      position: absolute;
+
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      outline: none;
+      opacity: 0;
+    }
+
+    form button {
+      margin: 0;
+      color: #fff;
+      background: #16a085;
+      border: none;
+      width: 508px;
+      height: 35px;
+      border-radius: 4px;
+      border-bottom: 4px solid #117A60;
+      transition: all .2s ease;
+      outline: none;
+    }
+
+    form button:hover {
+      background: #149174;
+      color: #0C5645;
+    }
+
+    form button:active {
+      border: 0;
+    }
+
+    form img {
+      position: absolute;
+      z-index: 1;
+      width: 100%;
+      height: 100%;
+
+    }
+  </style>
 </head>
 
-<body>
-  <H1>Age Estimator</H1>
-  <input type="file" name="fileToUpload" id="fileToUpload" accept="image/*">
-  <p id="opResult"></p>
+<body class="img js-fullheight"
+  style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
+
+  <form action="upload.php" method="POST">
+    <input type="file" name="fileToUpload" id="fileToUpload" multiple>
+    <p>Arraste a imagem para está area.</p>
+    <button type="submit">Consultar</button>
+  </form>
 </body>
 <script>
 
@@ -38,12 +114,10 @@ PDX-License-Identifier: MIT-0 (For details, see https://github.com/awsdocs/amazo
 
     rekognition.detectLabels(params, function (err, data) {
       if (err) console.log(err, err.stack); // an error occurred
-      else 
-      {
-        for (let i = 0; i < data["Labels"].length; i++)
-        {
+      else {
+        for (let i = 0; i < data["Labels"].length; i++) {
           if (data["Labels"][i]["Name"] != "Clothing") {
-            console.log(data["Labels"][i]["Name"] + " - " + data["Labels"][i]["Confidence"]); 
+            console.log(data["Labels"][i]["Name"] + " - " + data["Labels"][i]["Confidence"]);
           }
         }
       }
@@ -123,5 +197,9 @@ PDX-License-Identifier: MIT-0 (For details, see https://github.com/awsdocs/amazo
     });
   }
 </script>
+<script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
+<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
+<script src="js/main.js"></script>
 
 </html>
