--- a/main.html
+++ b/main.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="img js-fullheight"
-    style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
+<body class="img js-fullheight" style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
 
     <!-- <div class="wrapper">
         <nav id="sidebar">
@@ -59,8 +58,9 @@
     </nav>
     <div id="maintools">
         <div class="d-grid gap-2 col-10 mx-auto" style="margin-top: 2%;">
-            <a href="Image.html" class="btn-tools btn-primary-tools btn-lg" type="button">Registrar Produto</a>
+            <a href="imagem.html" class="btn-tools btn-primary-tools btn-lg" type="button">Registrar Produto</a>
             <a href="#" class="btn-tools btn-primary-tools btn-lg" type="button">Consultar Produto</a>
+            <a href="#" class="btn-tools btn-primary-tools btn-lg" type="button">Sobre</a>
         </div>
     </div>
 
