--- a/html/main.html
+++ b/html/main.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="img js-fullheight" style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
@@ -60,15 +60,15 @@
         <div class="d-grid gap-2 col-10 mx-auto" style="margin-top: 2%;">
             <a href="imagem.html" class="btn-tools btn-primary-tools btn-lg" type="button">Registrar Produto</a>
             <a href="#" class="btn-tools btn-primary-tools btn-lg" type="button">Consultar Produto</a>
-            <a href="#" class="btn-tools btn-primary-tools btn-lg" type="button">Sobre</a>
+            <a href="salvar.html" class="btn-tools btn-primary-tools btn-lg" type="button">Salvar</a>
+            <a href="about.html" class="btn-tools btn-primary-tools btn-lg" type="button">Sobre</a>
         </div>
     </div>
-
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+    
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/popper.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
