Ajustes no html

--- a/html/imagem.html
+++ b/html/imagem.html
@@ -30,7 +30,6 @@ PDX-License-Identifier: MIT-0 (For details, see https://github.com/awsdocs/amazo
       width: 500px;
       height: 200px;
       border: 4px dashed #fff;
-
     }
 
     form p {
@@ -44,7 +43,6 @@ PDX-License-Identifier: MIT-0 (For details, see https://github.com/awsdocs/amazo
 
     form input {
       position: absolute;
-
       margin: 0;
       padding: 0;
       width: 100%;
@@ -80,21 +78,21 @@ PDX-License-Identifier: MIT-0 (For details, see https://github.com/awsdocs/amazo
       z-index: 1;
       width: 100%;
       height: 100%;
-
     }
   </style>
 </head>
 
-<body class="img js-fullheight" style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
+<body class="img js-fullheight"
+  style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
   <nav class="navbar navbar-dark bg-dark">
     <span class="navbar-brand mb-0 h1">GR Company</span>
-</nav>
+  </nav>
   <form action="" method="POST">
     <input type="file" name="fileToUpload" id="fileToUpload" multiple>
     <p>Arraste a imagem para está area.</p>
     <button type="submit">Consultar</button>
   </form>
-<!-- 
+  <!-- 
   <div> 
     <footer class="footer footer-dark bg-dark">
       
