--- a/html/main.html
+++ b/html/main.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
- 
-<body class="img js-fullheight" style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
 
+<body class="img js-fullheight"
+    style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
     <!-- <div class="wrapper">
         <nav id="sidebar">
             <div class="sidebar-header">
@@ -64,7 +64,7 @@
             <a href="about.html" class="btn-tools btn-primary-tools btn-lg" type="button">Sobre</a>
         </div>
     </div>
-    
+
     <script src="../js/jquery.min.js"></script>
     <script src="../js/popper.js"></script>
     <script src="../js/bootstrap.min.js"></script>
