--- a/html/salvar.html
+++ b/html/salvar.html
@@ -20,7 +20,7 @@ PDX-License-Identifier: MIT-0 (For details, see https://github.com/awsdocs/amazo
     body {
       background: rgba(0, 0, 0, 0.9);
     }
-    
+
     form {
       position: absolute;
       top: 50%;
@@ -30,7 +30,6 @@ PDX-License-Identifier: MIT-0 (For details, see https://github.com/awsdocs/amazo
       width: 500px;
       height: 200px;
       border: 4px dashed #fff;
-
     }
 
     form p {
@@ -44,7 +43,6 @@ PDX-License-Identifier: MIT-0 (For details, see https://github.com/awsdocs/amazo
 
     form input {
       position: absolute;
-
       margin: 0;
       padding: 0;
       width: 100%;
@@ -85,10 +83,11 @@ PDX-License-Identifier: MIT-0 (For details, see https://github.com/awsdocs/amazo
   </style>
 </head>
 
-<body class="img js-fullheight" style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
- <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-brand mb-0 h1">GR Company</span>
-    </nav>
+<body class="img js-fullheight"
+  style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
+  <nav class="navbar navbar-dark bg-dark">
+    <span class="navbar-brand mb-0 h1">GR Company</span>
+  </nav>
   <form action="../db/index.js" name="forme" method="POST">
     <input type="file" name="fileToUpload" id="fileToUpload" multiple>
     <p>Arraste a imagem para está area.</p>
@@ -97,15 +96,15 @@ PDX-License-Identifier: MIT-0 (For details, see https://github.com/awsdocs/amazo
 </body>
 <script>
 
-document.getElementById("fileToUpload").addEventListener("change", function (event) {
+  document.getElementById("fileToUpload").addEventListener("change", function (event) {
     var imagem = confirm("Enviar a imagem");
 
-    if(imagem){
+    if (imagem) {
       ProcessImage();
     }
   }, false);
 
-  
+
 
   //Calls DetectFaces API and shows estimated ages of detected faces
   function DetectFaces(imageData) {
