--- a/html/about.html
+++ b/html/about.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
-<body class="img js-fullheight" style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
+<body class="img js-fullheight"
+    style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
 
     <!-- As a heading -->
     <nav class="navbar navbar-dark bg-dark">
@@ -18,16 +19,21 @@
     </nav>
     <div id="maintools">
         <div class="d-grid gap-2 col-10 mx-auto" style="margin-top: 2%;">
-            <h1 style="text-align: center; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Sobre nós</h1>
+            <h1
+                style="text-align: center; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+                Sobre nós</h1>
             <h3>Olá, tudo bem? Espero que sim =D</h3>
             <p>Estamos aqui para apresentar a vocês o grande <b>Talento</b> que adquirimos ao longo do curso.
-                Habilidades que jamais serão disperdiçadas enquanto andarmos nessa Terra. 
+                Habilidades que jamais serão disperdiçadas enquanto andarmos nessa Terra.
             </p>
             <p>
-                Giovanni Trintinalia e Renan Soares cumpriram sua missão em oferecer um sistema capaz de realizar a análise de reconhecimento de imagem utilizando <b>AWS Rekognition</b>.
-                O mundo é um lugar melhor agora e as pessoas podem reconhecer seus produtos em paz absoluta e viver em harmonia.
+                Giovanni Trintinalia e Renan Soares cumpriram sua missão em oferecer um sistema capaz de realizar a
+                análise de reconhecimento de imagem utilizando <b>AWS Rekognition</b>.
+                O mundo é um lugar melhor agora e as pessoas podem reconhecer seus produtos em paz absoluta e viver em
+                harmonia.
             </p>
-            <iframe src="https://giphy.com/embed/eNMrFVCX3KQO5vNVaM" width="100" height="100" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+            <iframe src="https://giphy.com/embed/eNMrFVCX3KQO5vNVaM" width="100" height="100" frameBorder="0"
+                class="giphy-embed" allowFullScreen></iframe>
         </div>
     </div>
 
