--- a/html/index.html
+++ b/html/index.html
@@ -9,11 +9,9 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../css/style.css">
 </head>
- 
-<body class="img js-fullheight" style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
-	<nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-brand mb-0 h1">GR Company</span>
-    </nav>
+
+<body class="img js-fullheight"
+	style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
@@ -36,7 +34,8 @@
 									class="fa fa-fw fa-eye field-icon toggle-password"></span>
 							</div>
 							<div class="form-group">
-								<a href="main.html" type="submit" id="btnEntrar_Click" class="form-control btn btn-primary submit px-3">Entrar</a>
+								<a href="main.html" type="submit" id="btnEntrar_Click"
+									class="form-control btn btn-primary submit px-3">Entrar</a>
 							</div>
 							<div class="form-group d-md-flex">
 								<div class="w-50">
